@@ -1,4 +1,7 @@
 2012-02-29 arnaud.fontaine
+* Display error messages in Component_view which may have been raised when validating a Component in draft state.
+
+2012-02-29 arnaud.fontaine
 * Add portal_components to keep path list.
 
 2012-02-29 arnaud.fontaine
